[package]
name = "rosalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
memx = "0.1"
libc = "0.2"
indexmap = "1.7"
thread_local = { version = "1.1", optional = true }


[features]
allocator-api = ["thread_local"]
default = ["allocator-api"]
